<resources>
    <string name="app_name">Pets App</string>
    <string name="action_settings">Settings</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_unknown">Unknown</string>
    <string name="unit_pet_weight">kg</string>
    <string name="hint_pet_weight">Weight</string>
    <string name="hint_pet_breed">Breed</string>
    <string name="category_measurement">Measurement</string>
    <string name="category_gender">Gender</string>
    <string name="category_overview">Overview</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="editor_activity_title_new_pet">Add a Pet</string>
    <string name="editor_activity_title_edit_pet">Edit Pet Information</string>
    <string name="action_delete_all_entries">Delete All Pets</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="hint_pet_name">Name</string>
    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_successful">Pet saved</string>

    <string name="editor_edit_pet_successful">Pet edited</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_failed">Error with saving pet</string>

    <string name="editor_edit_pet_failed">Error with editing pet</string>

    <string name="insert_dummy_pet_successful">Dummy Pet Inserted </string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a pet</string>
    <string name="alert_dialog_message">Discard your changes and quit editing?</string>
    <string name="alert_dialog_affirmative">Discard</string>
    <string name="alert_dialog_negative">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <string name="catalog_delete_all_pets_failed">Error with deleting all pets</string>


    <string name="catalog_delete_all_pets_successful">All pets deleted</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="editor_delete_dialog_msg">Delete this pet?</string>

    <string name="catalog_delete_dialog_msg">Delete all pets?</string>

    <string name="unknown_breed">Unknown Breed</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

</resources>
